--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang ="en">
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./stylesheet.css"/>
+
+</head>
+
+<body class = "d-flex flex-column" >
+    <header class = "d-flex justify-content-center bg-primary bg-gradient border-bottom border-dark border-5">
+        <h1>Weather Website</h1>
+    </header>
+    <main class = "d-flex flex-row">
+    <section class = "d-flex flex-column w-25 h-25">
+        <div class = "d-flex flex-column  p-3">
+            <h2 class = "d-flex justify-content-center my-3">Search for a city:</h2>
+            <input id="search-input" class =" rounded my-3" type="text" placeholder="Search!">
+            <button class = "search btn btn-info my-2 btn-sml">Search!</button>
+        </div>
+        <div class = "d-flex flex-column align-items-center" id = "history-container">
+            <li>a</li>
+            <li>b</li>
+            <li>c</li>
+
+        </div>
+    </section >
+    <section class = "d-flex flex-column w-75 m-4">
+        <div class = "currentday-data border border-dark border-3 m-3 p-3">
+            
+        </div>
+        <h4>5-day Forcast</h4>
+        <div class = "d-flex flex-row futureday-data justify-content-evenly">
+            <div class = " card m-2 p-3 w-25">
+                <p> date</p>
+                <p> icon</p>
+                <p> temp</p>
+                <p> wind</p>
+                <p> humidity</p>
+            </div>
+            <div class = " card m-2 p-3 w-25">
+                <p> date</p>
+                <p> icon</p>
+                <p> temp</p>
+                <p> wind</p>
+                <p> humidity</p>
+            </div>
+            <div class = " card m-2 p-3 w-25">
+                <p> date</p>
+                <p> icon</p>
+                <p> temp</p>
+                <p> wind</p>
+                <p> humidity</p>
+            </div>
+            <div class = " card m-2 p-3 w-25">
+                <p> date</p>
+                <p> icon</p>
+                <p> temp</p>
+                <p> wind</p>
+                <p> humidity</p>
+            </div>
+
+        </div>
+
+    </section>
+    </main>
+
+
+</body>
+<script src="./script.js"></script>
+
+</html>
