fixed search bar trying to do local repository stuff

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>Weather Website</h1>
     </header>
     <main class = "d-flex flex-row">
-    <section class = "d-flex flex-column w-25 h-25">
-        <div class = "d-flex flex-column  p-3">
+    <section class = "d-flex flex-column w-25 h-25 border-end border-dark border-2 min-vh-100">
+        <div class = "d-flex flex-column  p-3 border-bottom border-dark border-2">
             <h2 class = "d-flex justify-content-center my-3">Search for a city:</h2>
             <input id="search-input" class =" rounded my-3" type="text" placeholder="Search!">
             <button class = "search btn btn-info my-2 btn-sml">Search!</button>
@@ -29,7 +29,7 @@
         </div>
     </section >
     <section class = "d-flex flex-column w-75 m-4">
-        <div class = "currentday-data border border-dark border-3 m-3 p-3">
+        <div class = "currentday-data border border-dark border-3 m-3 p-3 bg-primary bg-gradient">
             
         </div>
         <h4>5-day Forcast</h4>
@@ -41,7 +41,7 @@
                 <p> wind</p>
                 <p> humidity</p>
             </div>
-            <div class = " card m-2 p-3 w-25">
+            <div class = "flex-column card m-2 p-3 w-25">
                 <p> date</p>
                 <p> icon</p>
                 <p> temp</p>
