added to coloring and style, have local storage set up need to show now

--- a/index.html
+++ b/index.html
@@ -21,47 +21,18 @@
             <input id="search-input" class =" rounded my-3" type="text" placeholder="Search!">
             <button class = "search btn btn-info my-2 btn-sml">Search!</button>
         </div>
-        <div class = "d-flex flex-column align-items-center" id = "history-container">
-            <li>a</li>
-            <li>b</li>
-            <li>c</li>
-
+        <div class = "d-flex flex-column  p-2" id = "history-container">
+            <button class = " btn btn-info my-2 btn-sml">Name1</button>
+            <button class = " btn btn-info my-2 btn-sml">Name2</button>
+            <button class = "btn btn-info my-2 btn-sml">Name3</button>
         </div>
     </section >
     <section class = "d-flex flex-column w-75 m-4">
-        <div class = "currentday-data border border-dark border-3 m-3 p-3 bg-primary bg-gradient">
+        <div class = "currentday-data m-3 p-3 bg-info bg-gradient rounded">
             
         </div>
         <h4>5-day Forcast</h4>
         <div class = "d-flex flex-row futureday-data justify-content-evenly">
-            <div class = " card m-2 p-3 w-25">
-                <p> date</p>
-                <p> icon</p>
-                <p> temp</p>
-                <p> wind</p>
-                <p> humidity</p>
-            </div>
-            <div class = "flex-column card m-2 p-3 w-25">
-                <p> date</p>
-                <p> icon</p>
-                <p> temp</p>
-                <p> wind</p>
-                <p> humidity</p>
-            </div>
-            <div class = " card m-2 p-3 w-25">
-                <p> date</p>
-                <p> icon</p>
-                <p> temp</p>
-                <p> wind</p>
-                <p> humidity</p>
-            </div>
-            <div class = " card m-2 p-3 w-25">
-                <p> date</p>
-                <p> icon</p>
-                <p> temp</p>
-                <p> wind</p>
-                <p> humidity</p>
-            </div>
 
         </div>
 
@@ -70,6 +41,7 @@
 
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <script src="./script.js"></script>
 
 </html>
